feat(movies/reviews): added multiples routes for reviews and movies
- /popular to retrieve the popular movies (of All time)
- /Latest to retrieve a list of the latest movies
-/reviews/latest to retrieve the latest reviews that was made
+ documentation to link the openAPI
