# documentation/openapi.yaml
@@ -282,6 +282,29 @@ paths:
           description: A list of movies
         '500':
           description: Error retrieving movies
+  /movies/popular:
+    get:
+      tags:
+        - movie
+      summary: Retrieves a list of popular movies
+      parameters:
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 0
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 10
+      responses:
+        '200':
+          description: A list of popular movies
+        '500':
+          description: Error retrieving popular movies
   /movies/search:
     get:
       tags:
@@ -308,6 +331,32 @@ paths:
         '500':
           description: Error retrieving movies
 
+  /movies/reviews/latest:
+    get:
+      tags:
+        - movie
+      summary: Retrieves a list of latest reviews
+      parameters:
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 0
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 10
+            maximum: 50
+      responses:
+        '200':
+          description: A list of latest reviews
+        '404':
+          description: No reviews found
+        '500':
+          description: Error retrieving reviews
   /movies/reviews:
     get:
       tags:
